# cmake-project-template

./: .bash_colors  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-and-run  main.cpp  run.sh
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  Divisible.cpp  Divisible.h  divisible.cpp  main.cpp  main.h
src/divisible/: CMakeLists.txt  divisible.h
src/division/: CMakeLists.txt  division.cpp  division.h
test/: CMakeLists.txt  main.cpp
test/src/: divider_tests.cpp  divisible_test.cpp
